[workspace]
resolver = "2"
members = ["eprint", "papermd"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Mark Schultz-Wu <mark@schultz-wu.com>"]
repository = "https://github.com/mark-schultz-wu/eprint"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "io-util"] }
async-trait = "0.1"
bytes = "1"
quick-xml = "0.36"
governor = "0.6"
time = { version = "0.3", features = ["macros", "parsing", "formatting", "serde"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
