[package]
name = "eprint"
version = "0.1.0"
description = "Fetch and convert IACR ePrint papers."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
papermd = { path = "../papermd" }

clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }

# Pure-Rust text-only extraction
pdf-extract = "0.10"

# XDG paths
dirs = "5"
# Polite User-Agent + minimal HTML scraping for abstract/bibtex
regex = "1"

[[bin]]
name = "eprint"
path = "src/main.rs"
