[package]
name = "eprint"
version = "0.1.0"
description = "Fetch and convert IACR ePrint papers."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
papermd = { path = "../papermd" }

clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
quick-xml = { workspace = true }
governor = { workspace = true }

# Interactive picker for --select-version
dialoguer = "0.11"

# Pure-Rust text-only extraction
pdf-extract = "0.10"

# XDG paths
dirs = "5"
# Polite User-Agent + minimal HTML scraping for abstract/bibtex
regex = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "eprint"
path = "src/main.rs"
